--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <head meta charset="UTF-8"><tite>"Odin Recipes"</tite></head>
     <body><h1>Odin Recipes</h1>
     <ul><li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/butter_chicken.html"></a></li></ul></body>
+    <li><a href="recipes/butter_chicken.html">Butter Chikcen</a></li></ul></body>
     
 </html>
